--- a/main.css
+++ b/main.css
@@ -63,3 +63,36 @@
     color: lightgreen;
 }
 
+.collapsible-set {
+    margin: 2% 5%;
+}
+
+.panel-default>.panel-heading {
+    background-color: #006600;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.panel-default>.panel-heading:hover {
+    background-color: seagreen;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 16px;
+    text-decoration: none;
+    margin-top: 0;
+    margin-bottom: 0; 
+}
+
+
+
