--- a/main.css
+++ b/main.css
@@ -1,6 +1,31 @@
+/* For mobile phones: */
+/*[class*="col-"] {
+  width: 100%;
+}*/
+
+/* For desktop: */
+/*@media only screen and (min-width: 768px) {
+  .col-xs-1 {width: 8.33%;}
+  .col-xs-2 {width: 16.66%;}
+  .col-xs-3 {width: 25%;}
+  .col-xs-4 {width: 33.33%;}
+  .col-xs-5 {width: 41.66%;}
+  .col-xs-6 {width: 50%;}
+  .col-xs-7 {width: 58.33%;}
+  .col-xs-8 {width: 66.66%;}
+  .col-xs-9 {width: 75%;}
+  .col-xs-10 {width: 83.33%;}
+  .col-xs-11 {width: 91.66%;}
+  .col-xs-12 {width: 100%;}
+}*/
+
 /* Navigation Bar */
 .navbar-default {
     background-color: seagreen;
+    color: white;
+}
+
+.fa-bars {
     color: white;
 }
 
@@ -23,14 +48,6 @@
 .page-footer ul {
     list-style-type: none;
     color: white;
-}
-
-.left-footer {
-    text-align: right;
-}
-
-.right-footer {
-    text-align: left;
 }
 
 .copyright {
@@ -70,6 +87,7 @@
     color: lightgreen;
 }
 
+/* FAQ */
 .panel-default>.panel-heading {
     background-color: #006600;
     color: white;
@@ -97,4 +115,29 @@
     margin-bottom: 0; 
 }
 
+/* mobile phones */ 
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: seagreen; 
+        color: white;
+    }
+    .navbar-default {
+        background-color: white;
+        color: seagreen;
+    }
+    .navbar-default .navbar-nav>li>a {
+        color: seagreen !important;
+    }
+    .navbar-default .navbar-brand {
+    color: seagreen;
+    }
+    .navbar .nav > .active > a {
+        background: #006600;
+        color: seagreen;
+    }
+    .fa-bars {
+        color: seagreen;
+    }
+    
+}
 
