--- a/main.css
+++ b/main.css
@@ -30,8 +30,9 @@
 }
 
 /* Page Titles */
-.page-header {
-    text-align: center;
+.display-4 a {
+    color: black;
+    text-decoration:none; 
 }
 
 /* Footer */
@@ -48,7 +49,9 @@
 .page-footer ul {
     list-style-type: none;
     color: white;
+    text-align: left;
 }
+
 
 .copyright {
     padding: 1%;
