--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -26,22 +26,22 @@
     <div class="row">
         <div class="col-4">
             <ul style="text-align: right;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="cart">Cart</a></li>
+                <li><a href="profile">Profile</a></li>
             </ul>
         </div>
         <div class="col-4">
             <ul style="text-align: center;">
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="sell.html">Sell</a></li>
-                <li><a href="fundraise.html">Fundraise</a></li>
+                <li><a href="shop">Shop</a></li>
+                <li><a href="sell">Sell</a></li>
+                <li><a href="fundraise">Fundraise</a></li>
             </ul>
         </div>
         <div class="col-4" style="text-align: left">
             <ul>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="faq">FAQ</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </div>
     </div>
