--- a/angular/src/app/pnf/pnf.component.html
+++ b/angular/src/app/pnf/pnf.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"><a href="#">{{title}}</a></h1>
+        <h1 class="display-4"><a href="{{ url }}">{{title}}</a></h1>
     </div>
-    <h3>Please navigate to a valid URL.</h3>
+    <h6>Please navigate to a valid URL.</h6>
+    <br>
 </div>
