--- a/angular/src/app/shop/shop.component.html
+++ b/angular/src/app/shop/shop.component.html
@@ -1,5 +1,10 @@
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"><a href="#">{{title}}</a></h1>
+        <h1 class="display-4"><a href="{{ url }}">{{title}}</a></h1>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <a href="{{ url }}" class="btn btn-success" role="button">Back to top</a>
+        </div>
     </div>
 </div>
