--- a/main.css
+++ b/main.css
@@ -44,6 +44,16 @@
 }
 
 /*
+* Sell Page
+*/
+/** Source: https://stackoverflow.com/questions/572768/styling-an-input-type-file-button*/
+input[type="file"] {
+    position: fixed;
+    right: 100%;
+    bottom: 100%;
+}
+
+/*
 * Footer
 */
 .page-footer {
