--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a routerLink="/cart" routerLinkActive="active" class="nav-link"><i class="fas fa-shopping-cart"></i></a></li>
-                <li class="nav-item"><a routerLink="/profile" routerLinkActive="active" class="nav-link"><i class="fas fa-user"></i></a></li>
+                <li class="nav-item"><a routerLink="profile" routerLinkActive="active" class="nav-link"><i class="fas fa-user"></i></a></li>
             </ul>        
         </div>  
     </nav>
