--- a/src/app/fundraise/fundraise.component.html
+++ b/src/app/fundraise/fundraise.component.html
@@ -1,9 +1,13 @@
+
+
 <div class="container">
+    
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"><a href="{{ url }}">{{ title }}</a></h1>
+        <h1 class="display-4"><a href="fundraise.php">Fundraise</a></h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. </p>
     </div>
+
     <!--Steps of Fundraising-->
     <div class="row">
         <div class="col-lg-4">
@@ -25,65 +29,46 @@
         </div>
     </div>
 
+       <!--Show Info If Guest--> <!--REQUIRE USER TO BE LOGGED IN-->
+
     <!--Fundraise Form-->
-    <hr class="featurette-divider">
-    <form id="fundraise-form" onsubmit="confirmMessage()">
+    <hr class="featurette-divider" >
+    <form id="fundraise-form" action="<?php $_SERVER['PHP_SELF'] ?>" method="GET">
         <div class="row">
-            <!--Contact Information-->
-            <div class="col-lg-3 form-group required">   
-                <label for="FName">Contact Name:</label><br>
-                <input class="form-control" id="FName" type="text" required placeholder="First Name" autofocus/>
-            </div>
-            <div class="col-lg-3 form-group">   
-                <label>&nbsp;</label><br>
-                <input class="form-control" id="LName" type="text" required placeholder="Last Name"/>
-            </div>
-            <div class="col-lg-3 form-group required">   
-                <label for="Email">Contact Email:</label><br>
-                <input class="form-control" id="Email" type="email" required placeholder="your@email.com" />
-            </div>
-            <div class="col-lg-3 form-group ">   
-                <label for="Number">Contact Number:</label><br>
-                <input class="form-control" id="Number" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(___)-___-____">
-            </div>
             <!--Organization Information-->
             <div class="col-lg-3 form-group required">   
                 <label for="org">Organization (CIO):</label><br>
-                <input class="form-control" id="org" type="text" placeholder="Name" required/>
+                <input class="form-control" id="org" name="cio" type="text" placeholder="Name" required autofocus>
             </div>
             <div class="col-lg-3 form-group required d-inline">   
                 <label for="CharityButton">Fundraising Purpose:</label><br>
-                <input type="radio" name="purpose" id="CIO-purpose" value="CIO" required><span id="choice"> <label for="CIO-purpose"> CIO</label> </span><br>
-                <input type="radio" name="purpose" id="Charity-purpose" value="CIO" required><span id="choice"> <label for="Charity-purpose"> Charity</label> </span>
-                
-            </div>
-            <div class="col-lg-6 form-group">   
-                <label for="description">Fundraising Description:</label><br>
-                <textarea class="form-control" id="description" rows=2 placeholder="Let everyone know what you're raising money for!"></textarea>
-            </div>
+                <input onchange="checkCharity()" type="radio" name="purpose" id="CIO-purpose" value="CIO" required><span id="choice"> <label for="CIO-purpose"> Your CIO</label> </span><br>
+                <input onchange="checkCharity()" type="radio" name="purpose" id="Charity-purpose" value="CHARITYYTESTNAME" required><span id="choice"> <label for="Charity-purpose"> Charity (please specify):</label> </span>
+                <input  type="text" id="charityName" name="charity">
+                <!--Charity Validation-->
+                <div class="col-lg-4 d-inline pt-lg-2 form-group" id="charityError" style="visibility: hidden">
+                        <p id="charityErrorMessage" style="color: red; font-size: 14px;"> Please fill out the name of the charity.</p>
+                </div>
+
+                <p id="signupError" style="color: red; font-size: 14px;"> </p> 
+            </div>            
             <!--Fundraising Information-->
-            <div class="col-lg-3 form-group required">   
+            <div class="col-lg-2 form-group required">   
                 <label for="start">Start Date:</label><br>
-                <input required type="date" id="start" placeholder="YYYY-MM-DD" min="2020-02-27">
+                <input required type="date" id="start" min="2020-02-27" style="width:105px">
             </div>
-            <div class="col-lg-3 form-group required">   
-                <label for="end">End Date:</label><br>
-                <input required type="date" id="end" placeholder="YYYY-MM-DD" min="2020-06-27">
+            <div class="col-lg-2 form-group required">   
+                <label for="end">Duration:</label><br>
+                <input id="end" placeholder="# of Days" required type="number"step="1" min="1" max="30" style="width:100px" >
             </div>
             <!--Promo code Box-->
             <div class="col-lg-2 form-group required">   
                 <label for="promo">Promotional Code:</label><br>
-                <input onkeyup="checkPromo()" required type="text" id="promo" pattern="[A-Za-z0-9]{3,6}" placeholder="Min. 3 characters" minlength="3" maxlength="6" style="width: 150px">
+                <input onkeyup="checkPromo()" required type="text" id="promo" name="code" pattern="[A-Za-z0-9]{3,6}" placeholder="Min. 3 characters" minlength="3" maxlength="6" style="width: 150px">
             </div>
-            <!--Promo code Validation-->
-            <span>
-            <div class="col-lg-4 d-inline pt-lg-2 form-group" id="promoError" style="visibility: hidden">
-                <p id="errorMessage" style="color: red; font-size: 14px;"> <br>Error. Code has been used before.</p>
-            </div>
-            </span>
             <!--Submit Button-->
             <div class="col-lg-12 form-group"> 
-                <button id="submitButton" type="submit" class="btn btn-success" style="width:144px">Submit</button> 
+                <button id="submitButton" name="promo" type="submit" class="btn btn-secondary" style="width:144px">Submit</button> 
             </div>
         </div>
     </form>
@@ -93,4 +78,5 @@
         <img class="rounded mx-auto d-block" src="https://svgsilh.com/svg/40319.svg" alt="Checkmark" style="width:90px;height:90px;" class="center" >
         <p id="Confirm-Text" class="lead" style="padding-top: 10px; text-align: center;"></p>
     </div>
+
 </div>
