--- a/src/app/sell/sell.component.html
+++ b/src/app/sell/sell.component.html
@@ -1,112 +1,142 @@
+
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"><a href="{{ url }}">{{ title }}</a></h1>
-    </div>
-    <div class="row">
+        <h1 class="display-4"><a href="sell">Sell</a></h1>
+        
+        <!--Show Info If Guest--> <!--REQUIRE USER TO BE LOGGED IN-->
+
+        <!--PHP: Insert Items into Database-->
+
+    <div id="sellForm" class="row" style="visibility: visible">
         <!--Upload Button-->
         <div class="col-lg-4">
-            <img class="rounded mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/OOjs_UI_icon_upload-ltr.svg/1024px-OOjs_UI_icon_upload-ltr.svg.png" alt="Upload Icon" style="width:150px;height:150px;" class="center" >
-        </div>
+            <img class="rounded mx-auto d-block" src="https://cdn.onlinewebfonts.com/svg/img_234957.png" alt="Upload Icon" style="width:150px;height:150px;" class="center" >
+            <!--UPLOAD FORM-->
+            <!--Source: https://www.w3schools.com/php/php_file_upload.asp ; https://stackoverflow.com/questions/37504383/button-inside-a-label https://stackoverflow.com/questions/572768/styling-an-input-type-file-button -->
+            <form name="upload-form" action="<?php $_SERVER['PHP_SELF'] ?>" method="GET" enctype="multipart/form-data">
+                <br>
+                <div class="form-group">
+                    <label>Upload an image:<br><small>(.jpg, .jpeg, .png)</small></label><br></div>
 
+                <input id="kh" type="file" style="display:none" />
+                <button for="fileToUpload" type="button" class="btn btn-secondary" style="background-color: #E8E8E8; border-color:transparent; color:black;">
+                    <label for="fileToUpload" style=" display: inline-block; width:110px; height:4px; cursor: pointer;">Choose Image</label>
+                </button> <br>
+                <small style="color: red" id="imgError"></small>
+                
+                <input id="fileToUpload" name="fileToUpload" type="file" style="display:none" require/>
+                <br>
+                <input type="submit" name="upload" value="Upload" style="display:none">
+
+                
+                <button type="button" class="btn btn-secondary">
+                    <label for="upload" style="display:inline-block; width:100px; height:4px; cursor:pointer;">Upload</label>
+                </button>
+            </form>
+
+            
+        
+        </div>
         <div class="col-lg-8">
-            <div class="page-content">
+            <!--ITEM FORM-->
             <!--Source: Bootstrap form from https://www.w3schools.com/bootstrap/bootstrap_forms.asp -->
-            <form id="sell-form" class="form-horizontal" action="" method="post" onsubmit="populate(); return false;">
-                <div class="form-group" >
-                    <label class="control-label col-sm-2" for="category">Category:</label>
-                    <div class="col-sm-8">          
-                        <select class="form-control" id="category">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+            <form id="sell-form" action="<?php $_SERVER['PHP_SELF'] ?>" method="POST">
+                <!--Category Selection-->
+                <div class="form-group required">
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="ctg">Category:</label>
+                    <div class="col-sm-8"> 
+                        <select class="form-control" id="category" name="ctg" required style="cursor:pointer;">
+                            <option disabled selected value> -- select a category -- </option>
+                            <option value="1">Tops</option>
+                            <option value="2">Bottoms</option>
+                            <option value="3">Shoes</option>
+                            <option value="4">Accessories</option>
+                            <option value="5">Other</option>
                         </select>
                     </div>
                 </div>
                 <!--Brand Selection-->
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="brand">Brand:</label>
-                    <div class="col-sm-8">          
-                        <select class="form-control" id="brand">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
+                <div class="form-group">   
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="brand">Brand:</label>
+                    <div class="col-sm-8">
+                        <input class="col-sm-12" type="text" id="brandBox" name="brand"> 
                     </div>
                 </div>
                 <!--Size Selection-->
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="size">Size:</label>
+                <div class="form-group required">
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="size">Size:</label>
                     <div class="col-sm-8">          
-                        <select class="form-control" id="size">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                        <select class="form-control" id="size" name="size" required style="cursor:pointer;">
+                            <option disabled selected value> -- select a size -- </option>
+                            <option value="1">No Size</option>
+                            <option value="2">XS (00-1)</option>
+                            <option value="3">S (2-4)</option>
+                            <option value="4">M (5-7)</option>
+                            <option value="5">L (8-10)</option>
+                            <option value="6">XL (11-14)</option>
                         </select>
                     </div>
                 </div>
                 <!--Color Selection-->
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="color">Color:</label>
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="color">Color:</label>
                     <div class="col-sm-8">          
-                        <select class="form-control" id="color">
-                            <option>White</option>
-                            <option>Black</option>
-                            <option>Gray</option>
-                            <option>Brown</option>
-                            <option>Cream/Beige</option>
-                            <option>Tan</option>
-                            <option>Gold</option>
-                            <option>Silver</option>
-                            <option>Red</option>
-                            <option>Orange</option>
-                            <option>Yellow</option>
-                            <option>Green</option>
-                            <option>Blue</option>
-                            <option>Purple</option>
+                        <select class="form-control" id="color" name="color" style="cursor:pointer;">
+                            <option value="0" selected></option>
+                            <option value="1">Black</option>
+                            <option value="2">Blue</option>
+                            <option value="3">Brown</option>
+                            <option value="4">Cream</option>
+                            <option value="5">Gray</option>
+                            <option value="6">Green</option>
+                            <option value="7">Orange</option>
+                            <option value="8">Pink</option>
+                            <option value="9">Purple</option>
+                            <option value="10">Red</option>
+                            <option value="11">Yellow</option>
+                            <option value="12">White</option>
                         </select>
                     </div>
                 </div>
                 <!--Condition Selection-->
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="condition">Condition:</label>
+                <div class="form-group required">
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="cond">Condition:</label>
                     <div class="col-sm-8">          
-                        <select class="form-control" id="condition">
-                            <option>New</option>
-                            <option>Like New</option>
-                            <option>Good</option>
-                            <option>Fair</option>
-                            <option>Poor</option>
+                        <select class="form-control" id="condition" name="cond" required style="cursor:pointer;">
+                            <option disabled selected value> -- select a condition -- </option>
+                            <option value="1">New</option>
+                            <option value="2">Like New</option>
+                            <option value="3">Good</option>
+                            <option value="4">Fair</option>
+                            <option value="5">Poor</option>
                         </select>
                     </div>
                 </div>
                 <!--Description-->
                 <div class="form-group">   
-                    <label class="control-label col-sm-2" for="desc">Description:</label>
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="desc">Description:</label>
                     <div class="col-sm-8">
-                        <textarea class="form-control" id="desc" maxlength="250"></textarea>
+                        <textarea class="form-control" id="desc" name="desc" maxlength="250" onkeydown="checkWordCt()"></textarea>
+                        <div class="col-sm-14" style=" text-align:right;" id="wordCt"><small>250</small></div>
                     </div>
                 </div>
                 <!--Pricing-->
-                <div class="form-group">
-                    <label class="control-label col-sm-2 d-inline" for="price">Price:</label>
-                    <div class="col-3">
-                        <input class="form-control"  id="price" type="number" step="0.01" min="1" max="1000" required onchange="validPrice()">
-                        <small style="color: red" id="youearnError"></small><br>
+                <div class="form-group required">
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="price">Price:</label>
+                    <div class="col-sm-3">
+                        <input class="form-control"  id="price" name="price" type="number" step="0.01" min="1" max="1000" required onchange="validPrice()">
                     </div> 
+                    <div class="col-sm-12" style=" text-align:left;"><small style="color: red" id="youearnError"></small></div>
+                </div>
+                <div class="form-group"> 
+                    <label class="col-sm-12" style="display:inline-block; text-align:left;" for="youearn">You Will Earn:</label>
                     <div class="col-3">
-                        <label class="control-label" for="youearn">You Will Earn:</label>
                         <input disabled="true" class="form-control"  id="youearn" >
                     </div>
                 </div>
                 <!--List Item-->
                 <div class="form-group">        
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-12" style="display:inline-block; text-align:left;">
                         <button type="submit" class="btn btn-secondary">List Item</button>
                     </div>
                 </div>
@@ -115,6 +145,6 @@
             <div id="createdItems">
             </div>
             </div>
-        </div>
+        
     </div>
 </div>
