--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">   
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a routerLink="/shop" routerLinkActive="active" class="nav-link">Shop</a></li>
-                <li class="nav-item"><a routerLink="/sell" routerLinkActive="active" class="nav-link">Sell</a></li>
-                <li class="nav-item"><a routerLink="/fundraise" routerLinkActive="active" class="nav-link">Fundraise</a></li>
+                <li class="nav-item"><a routerLink="shop" routerLinkActive="active" class="nav-link">Shop</a></li>
+                <li class="nav-item"><a routerLink="sell" routerLinkActive="active" class="nav-link">Sell</a></li>
+                <li class="nav-item"><a routerLink="fundraise" routerLinkActive="active" class="nav-link">Fundraise</a></li>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a routerLink="/cart" routerLinkActive="active" class="nav-link"><i class="fas fa-shopping-cart"></i></a></li>
+                <li class="nav-item"><a routerLink="cart" routerLinkActive="active" class="nav-link"><i class="fas fa-shopping-cart"></i></a></li>
                 <li class="nav-item"><a routerLink="profile" routerLinkActive="active" class="nav-link"><i class="fas fa-user"></i></a></li>
             </ul>        
         </div>  
