Shop now displays all items.

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -9,13 +9,14 @@
                 <div class="card-img-top">
                 </div>
                 <div class="card-body">
-                    <p class="card-text">{{ item.id }}</p>
-                    <p class="card-text">{{ item.price }}</p>
+                    <p class="card-text">Brand: {{ item.brand }}</p>
+                    <p class="card-text">${{ item.price }}</p>
+                    <p class="card-text">By user: {{ item.userId }}
                 </div>
             </div>
         </div>
-        <div class="col-3">
-            <a href="{{ url }}" class="btn btn-success" role="button">Back to top</a>
-        </div>
+    </div>
+    <div class="col-3">
+        <a href="{{ url }}" class="btn btn-success" role="button">Back to top</a>
     </div>
 </div>
