--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -9,6 +9,7 @@
                 <div class="card-img-top">
                 </div>
                 <div class="card-body">
+                    <p class="card-text">Id: {{ item.id }}</p>
                     <p class="card-text">Brand: {{ item.brand }}</p>
                     <p class="card-text">${{ item.price }}</p>
                     <p class="card-text">By user: {{ item.userId }}
