--- a/assign4/src/styles.css
+++ b/assign4/src/styles.css
@@ -1,1 +1,198 @@
 /* You can add global styles to this file, and also import other style files */
+/**
+ * Author: Courtney Jacobs (cj5he), Amara Vo (av2jf)
+*/
+
+/* For mobile phones: */
+/*[class*="col-"] {
+  width: 100%;
+}*/
+
+/* For desktop: */
+/*@media only screen and (min-width: 768px) {
+  .col-xs-1 {width: 8.33%;}
+  .col-xs-2 {width: 16.66%;}
+  .col-xs-3 {width: 25%;}
+  .col-xs-4 {width: 33.33%;}
+  .col-xs-5 {width: 41.66%;}
+  .col-xs-6 {width: 50%;}
+  .col-xs-7 {width: 58.33%;}
+  .col-xs-8 {width: 66.66%;}
+  .col-xs-9 {width: 75%;}
+  .col-xs-10 {width: 83.33%;}
+  .col-xs-11 {width: 91.66%;}
+  .col-xs-12 {width: 100%;}
+}*/
+
+/*
+* Navigation Bar
+*/
+.navbar-default {
+    background-color: seagreen;
+    color: white;
+}
+
+.fa-bars {
+    color: white;
+}
+
+/*
+* Page Titles
+*/
+.display-4 a {
+    color: black;
+    text-decoration:none; 
+}
+
+/*
+* Sell Page
+*/
+/** Source: https://stackoverflow.com/questions/572768/styling-an-input-type-file-button*/
+input[type="file"] {
+    position: fixed;
+    right: 100%;
+    bottom: 100%;
+}
+
+/*
+* Footer
+*/
+.page-footer {
+    background-color: seagreen;
+    color: white;
+    padding-top: 2%;
+}
+
+.page-footer a {
+    color: white;
+}
+
+.page-footer ul {
+    list-style-type: none;
+    color: white;
+    text-align: left;
+}
+
+
+.copyright {
+    padding: 1%;
+    margin-top: 1%; 
+    background-color: #006600;
+}
+
+.navbar-default, .page-footer a:hover {
+    color: lightgreen;
+    text-decoration: none;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    color: lightgreen;
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+    color: lightgreen;
+}
+
+.navbar .nav > .active > a {
+    background: #006600;
+    color: white;
+}
+
+.navbar .nav > .active > a:hover {
+    background: #006600;
+    color: lightgreen;
+}
+
+/*
+* FAQ
+*/
+.panel-default>.panel-heading {
+    background-color: #006600;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.panel-default>.panel-heading:hover {
+    background-color: seagreen;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    text-decoration: none;
+    margin-top: 0;
+    font-size: 15px;
+    margin-bottom: 0; 
+}
+
+/*
+* Forms CSS
+*/
+
+/* Source: stackoverflow.com/questions/11197671/use-css-to-automatically-add-required-field-asterisk-to-form-inputs */
+.form-group.required label:after {
+    content:" *";                           /*Marks items that are required*/
+    color:red;
+}
+#choice label:after {
+    content:"";                           /* Removes asterisks */
+    color:blue;
+}
+
+.form-group textarea {
+    resize: none;
+}
+
+#dt {
+    text-indent: -500px;
+    height: 25px;
+    width: 200px;
+  }
+
+/* mobile phones */ 
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: seagreen; 
+        color: white;
+    }
+    .navbar-default {
+        background-color: white;
+        color: seagreen;
+    }
+    .navbar-default .navbar-nav>li>a {
+        color: seagreen !important;
+    }
+    .navbar-default .navbar-brand {
+    color: seagreen;
+    }
+    .navbar .nav > .active > a {
+        background: #006600;
+        color: seagreen;
+    }
+    .fa-bars {
+        color: seagreen;
+    }
+
+    .display-4 a {
+        color: white;
+    }
+    
+}
+
+
