--- a/assign4/src/app/app.component.html
+++ b/assign4/src/app/app.component.html
@@ -2,7 +2,17 @@
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4"><a href="{{ url }}">{{ title }}</a></h1>
     </div>
-    <div class="row">
+    <form>
+        <input type="radio" value="newestFirst" id="newestFirst" name="sort" [(ngModel)]="sort">
+        <label for="newestFirst">Newest First</label><br>
+        <input type="radio" value="oldestFirst" id="oldestFirst" name="sort" [(ngModel)]="sort">
+        <label for="oldestFirst">Oldest First</label><br>
+        <input type="radio" value="lowToHigh" id="lowToHigh" name="sort" [(ngModel)]="sort">
+        <label for="lowToHigh">Price Low to High</label><br>
+        <input type="radio" value="highToLow" id="highToLow"name="sort" [(ngModel)]="sort">
+        <label for="highToLow">Price High to Low</label><br>
+    </form>
+    <div *ngIf="hasAccess == 'allowed'" class="row">
         <!-- Card columns from Bootstrap docs at https://getbootstrap.com/docs/4.0/components/card/ -->
         <div *ngFor="let item of responsedata" class="card-deck">
             <div class="card shadow-sm">
