--- a/assign4/src/app/app.component.html
+++ b/assign4/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4"><a href="{{ url }}">{{ title }}</a></h1>
+        <h1 class="display-4" name="top"><a href="{{ url }}">{{ title }}</a></h1>
     </div>
+
+    <div>
     <form>
         <input type="radio" value="newestFirst" id="newestFirst" name="sort" [(ngModel)]="sort">
         <label for="newestFirst">Newest First</label><br>
@@ -12,22 +14,28 @@
         <input type="radio" value="highToLow" id="highToLow"name="sort" [(ngModel)]="sort">
         <label for="highToLow">Price High to Low</label><br>
     </form>
-    <div *ngIf="hasAccess == 'allowed'" class="row">
-        <!-- Card columns from Bootstrap docs at https://getbootstrap.com/docs/4.0/components/card/ -->
-        <div *ngFor="let item of responsedata" class="card-deck">
-            <div class="card shadow-sm">
-                <div class="card-img-top">
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Id: {{ item.id }}</p>
-                    <p class="card-text">Brand: {{ item.brand }}</p>
-                    <p class="card-text">${{ item.price }}</p>
-                    <p class="card-text">By user: {{ item.userId }}
+    </div>
+    <div class="row">
+        <!-- Card columns from Bootstrap docs at https://getbootstrap.com/docs/4.0/components/card/ 
+            [ngClass]="{'text-success':true}"
+        -->
+        <div *ngFor="let item of responsedata" class="card-deck" style="text-align: center;">
+            <div class="col-sm-6">
+                <div class="card shadow-sm" style="width: 250px;">
+                    <div class="card-img-top">
+                    </div>
+                    <div class="card-body" >
+                        <img class="card-img-top" src="https://www.anjrpc.org/global_graphics/default-store-350x350.jpg" alt="Default Image">
+                        <p class="card-text">Id: {{ item.id }}</p>
+                        <p class="card-text">Brand: {{ item.brand }}</p>
+                        <p class="card-text">${{ item.price }}</p>
+                        <p class="card-text">By user: {{ item.userId }}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-3">
-        <a href="{{ url }}" class="btn btn-success" role="button">Back to top</a>
+    <div class="col-lg-12"  [ngStyle]="{'position':'relative', 'left': '90%', 'margin-top':'2%', 'margin-bottom': '2%'}">
+        <a href="#top" class="btn btn-success" role="button">Back to top</a>
     </div>
 </div>
