--- a/assign4/src/app/app.component.html
+++ b/assign4/src/app/app.component.html
@@ -3,17 +3,22 @@
         <h1 class="display-4" name="top"><a href="{{ url }}">{{ title }}</a></h1>
     </div>
 
-    <div>
-        <form>
-            <input type="radio" value="newestFirst" id="newestFirst" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
-            <label for="newestFirst">Newest First</label><br>
-            <input type="radio" value="oldestFirst" id="oldestFirst" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
-            <label for="oldestFirst">Oldest First</label><br>
-            <input type="radio" value="lowToHigh" id="lowToHigh" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
-            <label for="lowToHigh">Price Low to High</label><br>
-            <input type="radio" value="highToLow" id="highToLow"name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
-            <label for="highToLow">Price High to Low</label><br>
-        </form>
+    <div [ngClass]="{form: true, label: false}">
+        <div class="row">
+            <div class="col-lg-12 form-group">
+                <label >Sort By:</label>
+                <form id="filter">
+                    <input type="radio" value="newestFirst" id="newestFirst" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
+                    <label for="newestFirst"> Newest First</label><br>
+                    <input type="radio" value="oldestFirst" id="oldestFirst" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
+                    <label for="oldestFirst"> Oldest First</label><br>
+                    <input type="radio" value="lowToHigh" id="lowToHigh" name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
+                    <label for="lowToHigh"> Price Low to High</label><br>
+                    <input type="radio" value="highToLow" id="highToLow"name="sort" [(ngModel)]="generalSort" (change) ="handleChange($event)">
+                    <label for="highToLow"> Price High to Low</label><br>
+                </form>
+        </div>
+        </div>
     </div>
     <div class="row">
         <!-- Card columns from Bootstrap docs at https://getbootstrap.com/docs/4.0/components/card/ 
@@ -29,14 +34,14 @@
                         <p class="card-text">Id: {{ item.id }}</p>
                         <div *ngIf="item.brand != ''; else elseBlock"><p class="card-text">Brand: {{ item.brand }}</p></div>
                         <ng-template #elseBlock><p class="card-text">Brand: Not Specified</p></ng-template>                        
-                        <p class="card-text">${{ item.price }}</p>
-                        <p class="card-text">By user: {{ item.userId }}
+                        <div [ngClass]="{p: true}"><p class="card-text">${{ item.price }}</p> </div>
+                        <div [ngClass]="{p: false}"><p class="card-text">By user: {{ item.userId }} </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="col-lg-12"  [ngStyle]="{'position':'relative', 'left': '90%', 'margin-top':'2%', 'margin-bottom': '2%'}">
-        <a href="#top" class="btn btn-success" role="button">Back to top</a>
+        <a href="#top" class="btn btn-secondary" role="button">Back to top</a>
     </div>
 </div>
